<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ThirdFragment"
    android:layout_marginHorizontal="@dimen/margin_horizontal">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/your_name"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/description"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/price"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_goto_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/button_size"
        android:text="@string/btn_text3"
        android:backgroundTint="#52ABEF"
        android:textAllCaps="false"
        />

</LinearLayout>